Minor style tweak

--- a/paper.tex
+++ b/paper.tex
@@ -459,7 +459,7 @@ MAM is a secure and validatable data storage of the proposed architecture. And p
 In this section, time measurement is evaluated in two MAM operations: channel/endpoint creation and data attachment to endpoints. To perform the evaluation assessment, a personal computer and a Raspberry Pi 3 have been used to run MAM. 
 
 \subsubsection{Channel / Endpoint Creation}
-The length of a channel or endpoint is $2^{height}$ where \textit{height} is the height of Merkle Hash Tree in Merkle signature scheme (MSS). A channel with height $n$ can create $2^n$ endpoints, and an endpoint with height $m$ can attach $2^m$ messages, therefore the capacity of a channel is $2^{nm}$ messages in total. The greater the \textit{height} of MSS, the longer the channel/endpoint, however the higher the computational power required. In this task, both channel and endpoint creation are tested and the \textit{height} is set from 1 to 7 which is quite enough for data providers to upload data. The results are shown in Table \ref{tab:channel_create}, Table \ref{tab:endpoint_create}. The time duration for each \textit{height} is the average time of running 100 rounds.
+The length of a channel or endpoint is $2^{height}$ where \textit{height} is the height of Merkle Hash Tree in Merkle signature scheme (MSS). A channel with height $n$ can create $2^n$ endpoints, and an endpoint with height $m$ can attach $2^m$ messages, therefore the capacity of a channel is $2^{nm}$ messages in total. The greater the \textit{height} of MSS, the longer the channel/endpoint, however the higher the computational power required. In this task, both channel and endpoint creation are tested and the \textit{height} is set from 1 to 7 which is quite enough for data providers to upload data. The results are shown in Table \ref{tab:channel_create} and Table \ref{tab:endpoint_create}. The time duration for each \textit{height} is the average time of running 100 rounds.
 
 \begin{table}[H]
 	\caption{Time measurement of channel creation}
@@ -499,7 +499,7 @@ The length of a channel or endpoint is $2^{height}$ where \textit{height} is the
 	\end{tabular}
 \end{table}
 
-The results in Table \ref{tab:channel_create}, Table \ref{tab:endpoint_create} are plotted in Figure \ref{fig:mam_create}. Since the creation of channel and endpoint are MSS calculation, the curves of the same hardware are merely identical. On the other hand, the performance of Raspberry Pi 3 grows rapidly when \textit{height} is larger.
+The results in Table \ref{tab:channel_create} and Table \ref{tab:endpoint_create} are plotted in Figure \ref{fig:mam_create}. Since the creation of channel and endpoint are MSS calculation, the curves of the same hardware are merely identical. On the other hand, the performance of Raspberry Pi 3 grows rapidly when \textit{height} is larger.
   
 \begin{figure}[H]
     \centering
@@ -615,7 +615,7 @@ Before a data provider asks a broker to certify a session key, he blinds the ses
 	\end{tabular}
 \end{table}
 
-Table \ref{tab:gas} shows the gas usage for each function. Creating a smart contract (Listing \ref{lst:constructor}) costs the most gas, and functions (Listing \ref{lst:key_exchange} and Listing \ref{lst:key_certification}) that are related to key certification and key exchange need a lot of gas as well. Storage on blockchain costs a lot. It is expensive to use memory in Solidity. For instance, an SSTORE operation may cost 20000 gas when the value is set to non-zero from zero according to Ethereum Yellow Paper\cite{Ethereum}. Smart contract initialization, storing ciphertexts and signatures during key certification and key exchange needs a lot of operations and storages which causes high gas consumption. To certify session keys, blind signature is used and the whole process is recorded in the smart contract. However, storage on blockchain is expensive and blind signature is an interactive protocol which requires multi-steps of communications between broker and data provider. In our future work, we are going to explore the usage of the non-interactive zero knowledge protocol such as zk-SNARKS(zero-knowledge succinct non-interactive argument of knowledge)\cite{Snark} which can generate proofs off-chain and simplify the verification process that could not only reduce network and storage cost but also improve the privacy and security of session keys. On the other hand, we can observe that the broker is responsible for the most part of transaction fees while consumers only need to send one transaction to subscribe the product if they don't have to refund.
+Table \ref{tab:gas} shows the gas usage for each function. Creating a smart contract (Listing \ref{lst:constructor}) costs the most gas, and functions (Listing \ref{lst:key_exchange} and Listing \ref{lst:key_certification}) that are related to key certification and key exchange need a lot of gas as well. Storage on blockchain costs a lot. It is expensive to use memory in Solidity. For instance, an SSTORE operation may cost 20000 gas when the value is set to non-zero from zero according to Ethereum Yellow Paper\cite{Ethereum}. Smart contract initialization, storing ciphertexts and signatures during key certification and key exchange needs a lot of operations and storages which causes high gas consumption. To certify session keys, blind signature is used and the whole process is recorded in the smart contract. However, storage on blockchain is expensive and blind signature is an interactive protocol which requires multi-steps of communications between broker and data provider. In our future work, we are going to explore the usage of the non-interactive zero knowledge protocol such as zk-SNARKS(zero-knowledge succinct non-interactive argument of knowledge)\cite{Snark} which can generate proofs off-chain and simplify the verification process that could not only reduce network and storage cost but also improve the privacy and security of session keys. On the other hand, we can observe that the broker is responsible for the most part of transaction fees while consumers only need to send one transaction to subscribe the product if they do not have to refund.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %Bulleted lists look like this:
