--- a/paper.tex
+++ b/paper.tex
@@ -68,7 +68,7 @@
 
 %=================================================================
 % Full title of the paper (Capitalized)
-\Title{Decentralized Data Marketplace to Enable Trusted Machine Economy $^{\dagger}$}
+\Title{An Autonomous and Decentralized Data Marketplace for Trusted Machine Economy $^{\dagger}$}
 
 % Author Orchid ID: enter ID or remove command
 \newcommand{\orcidauthorA}{0000-0000-000-000X} % Add \orcidA{} behind the author's name
