--- a/references.bib
+++ b/references.bib
@@ -194,6 +194,12 @@ year = {2002},
 	howpublished= {\url{https://ethereum.github.io/yellowpaper/paper.pdf}},
 }
 
+@article{Hashcash,
+  title={Hashcash - a denial of service counter-measure},
+  author={Back, Adam},
+  year={2002}
+}
+
 @inproceedings{Snark,
 	author = {Bitansky, Nir and Canetti, Ran and Chiesa, Alessandro and Tromer, Eran},
 	title = {From Extractable Collision Resistance to Succinct Non-interactive Arguments of Knowledge, and Back Again},
