--- a/references.bib
+++ b/references.bib
@@ -187,11 +187,11 @@ year = {2002},
 }
 
 @misc{Ethereum,
-	author = {Gavin Wood},
-	title = {Ethereum: A secure decentralised generalised transaction ledger EIP-150 REVISION (759dccd - 2017-08-07)},
-	journal = {Ethereum Project Yellow Paper},
-	year = {2017},
-	howpublished= {\url{https://ethereum.github.io/yellowpaper/paper.pdf}},
+  author = {Gavin Wood},
+  title = {Ethereum: A secure decentralised generalised transaction ledger EIP-150 REVISION (759dccd - 2017-08-07)},
+  journal = {Ethereum Project Yellow Paper},
+  year = {2017},
+  howpublished= {\url{https://ethereum.github.io/yellowpaper/paper.pdf}},
 }
 
 @article{Hashcash,
@@ -201,35 +201,35 @@ year = {2002},
 }
 
 @inproceedings{Snark,
-	author = {Bitansky, Nir and Canetti, Ran and Chiesa, Alessandro and Tromer, Eran},
-	title = {From Extractable Collision Resistance to Succinct Non-interactive Arguments of Knowledge, and Back Again},
-	booktitle = {Proceedings of the 3rd Innovations in Theoretical Computer Science Conference},
-	series = {ITCS '12},
-	year = {2012},
-	isbn = {978-1-4503-1115-1},
-	location = {Cambridge, Massachusetts},
-	pages = {326--349},
-	numpages = {24},
-	url = {http://doi.acm.org/10.1145/2090236.2090263},
-	doi = {10.1145/2090236.2090263},
-	acmid = {2090263},
-	publisher = {ACM},
-	address = {New York, NY, USA},
+  author = {Bitansky, Nir and Canetti, Ran and Chiesa, Alessandro and Tromer, Eran},
+  title = {From Extractable Collision Resistance to Succinct Non-interactive Arguments of Knowledge, and Back Again},
+  booktitle = {Proceedings of the 3rd Innovations in Theoretical Computer Science Conference},
+  series = {ITCS '12},
+  year = {2012},
+  isbn = {978-1-4503-1115-1},
+  location = {Cambridge, Massachusetts},
+  pages = {326--349},
+  numpages = {24},
+  url = {http://doi.acm.org/10.1145/2090236.2090263},
+  doi = {10.1145/2090236.2090263},
+  acmid = {2090263},
+  publisher = {ACM},
+  address = {New York, NY, USA},
 } 
 
-@INPROCEEDINGS{Medrec,
-	author={A. {Azaria} and A. {Ekblaw} and T. {Vieira} and A. {Lippman}},
-	booktitle={2016 2nd International Conference on Open and Big Data (OBD)},
-	title={MedRec: Using Blockchain for Medical Data Access and Permission Management},
-	year={2016},
-	pages={25-30},
-	doi={10.1109/OBD.2016.11},
-	month={Aug},
+@inproceedings{Medrec,
+  author={A. {Azaria} and A. {Ekblaw} and T. {Vieira} and A. {Lippman}},
+  booktitle={2016 2nd International Conference on Open and Big Data (OBD)},
+  title={MedRec: Using Blockchain for Medical Data Access and Permission Management},
+  year={2016},
+  pages={25-30},
+  doi={10.1109/OBD.2016.11},
+  month={Aug},
 }
 
 @misc{Entangled,
-	title = {Masked Authenticated Messaging, entangled},
-	howpublished= {\url{https://github.com/iotaledger/entangled/tree/develop/mam}},
+  title = {Masked Authenticated Messaging, entangled},
+  howpublished= {\url{https://github.com/iotaledger/entangled/tree/develop/mam}},
 }
 
 @article{MSS,
