Add more description of MAM evaluation

--- a/references.bib
+++ b/references.bib
@@ -244,3 +244,8 @@ year = {2002},
   author = {Megan J. Hertzler},
   howpublished = {\url{https://www.splunk.com/en_us/blog/security/smart-grid-data-the-wild-west-of-privacy-rights.html}},
 }
+
+@misc{TA,
+  title = {Tangle-accelerator},
+  howpublished= {\url{https://github.com/DLTcollab/tangle-accelerator}},
+}
