--- a/paper.tex
+++ b/paper.tex
@@ -488,7 +488,7 @@ It is worth making a claim that all participants in data marketplace do not need
 \subsection{MAM Performance Evaluation}
 MAM is a secure and validatable data storage of the proposed architecture. And publishing data to MAM is the primary key to resolve all the difficulties discussed in previous sections. The interactions between data providers and MAM can be frequent. Data providers can either upload data in a short time interval or maintain multiple MAM channels or endpoints at the same time, hence the operation of MAM is one of the bottleneck in data marketplace.
 
-In this section, time measurement is evaluated in two MAM operations: channel/endpoint creation and data attachment to endpoints. To perform the evaluation assessment, a personal computer (3.2GHz 64-bit 6-core i7-8700 with RAM DDR4 16GB) and a Raspberry Pi 3 Model B (1.2 GHz 64-bit quad-core ARM Cortex-A53 with RAM LPDDR2 1GB) have been used to run MAM. 
+In this section, time measurement is evaluated in two MAM operations: channel/endpoint creation and data attachment to endpoints. To perform the evaluation assessment, a personal computer (PC, 3.2GHz 64-bit 6-core i7-8700 with RAM DDR4 16GB) and a Raspberry Pi 3 Model B (1.2 GHz 64-bit quad-core ARM Cortex-A53 with RAM LPDDR2 1GB) have been used to run MAM. 
 
 \subsubsection{Channel / Endpoint Creation}
 The length of a channel or endpoint is $2^{height}$ where \textit{height} is the height of Merkle Hash Tree in Merkle signature scheme (MSS). A channel with height $n$ can create $2^n$ endpoints, and an endpoint with height $m$ can attach $2^m$ messages, therefore the capacity of a channel is $2^{nm}$ messages in total. The greater the \textit{height} of MSS, the longer the channel/endpoint, however the higher the computational power required. In this task, both channel and endpoint creation are tested and the \textit{height} is set from 1 to 7 which is quite enough for data providers to upload data. The results are shown in Table \ref{tab:channel_create} and Table \ref{tab:endpoint_create}. The time duration for each \textit{height} is the average time of running 100 rounds.
@@ -531,7 +531,7 @@ The length of a channel or endpoint is $2^{height}$ where \textit{height} is the
 	\end{tabular}
 \end{table}
 
-The results in Table \ref{tab:channel_create} and Table \ref{tab:endpoint_create} are plotted in Figure \ref{fig:mam_create}. Since the creation of channel and endpoint are MSS calculation, the curves of the same hardware are merely identical. On the other hand, the performance of Raspberry Pi 3 grows rapidly when \textit{height} is larger.
+The results in Table \ref{tab:channel_create} and Table \ref{tab:endpoint_create} are plotted in Figure \ref{fig:mam_create}. Since the creation of channel and endpoint are MSS calculation, the curves of the same hardware are nearly identical. On the other hand, the performance of Raspberry Pi 3 is acceptable when \textit{height} is smaller than 4, but time grows rapidly when \textit{height} is 5 or above. And the performance of PC remains acceptable even \textit{height} gets to 7. The result indicate that MAM channel/endpoint creation is a laborious job for Raspberry Pi 3 when data providers need a longer channel/endpoint, which is one of the reason that MAM operations should be forwarded to borkers. 
   
 \begin{figure}[H]
     \centering
@@ -556,8 +556,9 @@ Tips selection requires a stable network connection to wait the response from IO
     \label{fig:mam_send}
 \end{figure}
 
-MAM operations take a lot of time for both devices, but Raspberry Pi 3 spends even more time than PC. The simulation results above indicate that MAM is difficult for low-level sensor devices to run, which these devices are the majority hardware as data providers in the data marketplace. Furthermore, sensors with the low computing power and weak internet connection are not able to have enough resources to handle data collection, data transmission on MAM and trading process with consumers simultaneously. Therefore, transferring MAM operations to brokers, which can be PCs or even more powerful machines, while ensuring the profit of providers can effectively solve performance problems and lower the threshold for participation in the data marketplace. However, even on PC, MAM operations still cost a considerable time, improving the performance is an essential issue that needs to be done for the next step.  
+MAM operations take a lot of time for both devices, but Raspberry Pi 3 spends even more time than PC. The simulation results above indicate that MAM is difficult for low-level sensor devices to run, which these devices are the majority hardware as data providers in the data marketplace. Furthermore, sensors with the low computing power and weak internet connection are not able to have enough resources to handle data collection, data transmission on MAM and trading process with consumers simultaneously. 
 
+Therefore, transferring MAM operations to brokers while ensuring the profit and privacy of providers through blind signatures can effectively solve performance problems and lower the threshold for participation in the data marketplace. Brokers can be PCs or powerful machines that runs Ethereum client and Tangle-accelerator\cite{TA}. Where Ethereum client is used to interact with Ethereum and Tangle-accelerator is a caching proxy server for IOTA, which can serve thousands of IOTA requests at once without accessing remote IOTA full nodes frequently. However, MAM operations still cost a considerable time, improving the performance of MAM is an essential issue that needs to be done for the next step.  
 
 
 \subsection{Smart Contract}
