--- a/references.bib
+++ b/references.bib
@@ -238,3 +238,9 @@ year = {2002},
   journal={Ruhr-University Bochum, Tech. Rep},
   year={2008}
 }
+
+@misc{SmartGridPrivacy,
+  title = {Privacy Issues Related to Smart Grid Technologies},
+  author = {Megan J. Hertzler},
+  howpublished = {\url{https://www.splunk.com/en_us/blog/security/smart-grid-data-the-wild-west-of-privacy-rights.html}},
+}
