Descriptions for building blocks

--- a/paper.tex
+++ b/paper.tex
@@ -232,6 +232,9 @@ Brokers represent data providers and consumers to perform computing tasks as bro
 
 \subsubsection{Components}
 \begin{itemize}[leftmargin=*,labelsep=5.8mm]
+
+There are several building blocks in the proposed design to meet the expectations: 1) emit and access encrypted data stream; 2) retrieve transaction data for audit; 3) digital identity for all participants; and 4) enforcement of transparency and traceability.
+
 \item \textbf{Mask Authenticated Messaging: }
 IOTA is a feeless cryptocurrency designed for IoT while MAM is the second layer data communication protocol built on top of the IOTA network, the Tangle. MAM resolves the challenge of publishing authenticated streaming data as zero-value transactions to distributed ledgers, and provides the ability to publish and fetch encrypted messages over the Tangle along with data integrity and access control.
 
