--- a/paper.tex
+++ b/paper.tex
@@ -48,7 +48,9 @@ $^{3}$ \quad BiiLabs Co., Ltd.}
 \begin{document}
 
 \section{Introduction}
-The growth of data marketplaces is an inevitable result of the IoT (Internet of Things) revolution. As physical assets such as ships, factories, vehicles, farms and buildings become digital, their digital twins will gradually act as secure data exchanges.\cite{digitaltwin, AutonomousDriving} As data streams surge across silos and carry value across organizations, traditional value chains will transition into a web of value. This paradigm shift will be more complex to administers, forcing businesses to rethink their competitive play as part of these ecosystems. Data marketplaces will emerge as a means to exchange data, monetize data streams and provide the basis of new business models. We refer to this new wave of value creation, for the Internet of Everything, as the "Economy of Things." There are three main barriers to achieving data marketplace:
+As the future that some indirect information such as web-surfing hours, location tracking data or even daily electric meter records can unveil an individual’s lifestyle comes, an insurance company may easily compute customized premiums while marketing industry can target potential consumers with precise personal advertisement. Inevitably, the value of data is explicitly identified and connected to current business model because of the spread of personal devices, data produced by end-users has faced with new challenges such as ownership fights, reasonable use and not surprisingly -- trading spaces with lawful basis.
+
+The growth of data marketplaces is an inevitable result of the IoT (Internet of Things) revolution. As physical assets such as ships, factories, vehicles, farms and buildings become digital, their digital twins will gradually act as secure data exchanges.\cite{digitaltwin, AutonomousDriving} As data streams surge across silos and carry value across organizations, traditional value chains will transition into a web of value. This paradigm shift will be more complex to administers, forcing businesses to rethink their competitive role as part of these ecosystems. Data marketplaces will emerge as a means to exchange data, monetize data streams and provide the basis of new business models. We refer to this new wave of value creation, for the Internet of Everything, as the "Economy of Things." There are three main barriers to achieving data marketplace:
 \begin{enumerate}[leftmargin=*,labelsep=4.9mm]
     \item Data owners do not have much control over their data and their data is locked in silos managed by products and services companies.
     \item Data owners only have access to their own data which has little value when it comes to knowledge discovery.
@@ -62,7 +64,7 @@ To overcome these barriers, we implemented IoT-enabled data marketplace and sens
     \item Data Buyers consuming data streams or downloading data sets are interested in the additional value that external data can bring to their internal data.
 \end{enumerate}
 
-Looking at Airbox\cite{LASS} as an example, every household with an Airbox device can collect air quality records automatically and autonomically—rather than passively receive the outcomes from the centralized authorities. To protect privacy, data should be encrypted before going on-chain. As for data reliability, we extended the backbone design of the Airbox to interoperate smart-contract-oriented structure to record every transaction. At the same time, data on-chain will send a verifiable request to mark itself as "being tradeable." This step enables buyers to review and bargain at will. Last but not least, payments will be stored on the smart contracts until the transactions are confirmed. The entire sequence is illustrated in Figure \ref{fig:airbox}.
+For better clarification, there are two scenarios shown below respectively from the views of data producers and data users, which can be extended to sellers and buyers in our proposed model. In the first scenario, with deteriorating air quality as well as controversial released safe reports, citizens start to urge the government to issue real-time air quality index. However, limited to costs and less incentives, the authorities barely improve the situation. In the case of Airbox\cite{LASS}, every household with an Airbox device can collect air quality records automatically and autonomically—rather than passively receive the outcomes from the centralized authorities. To protect privacy, data should be encrypted before going on-chain. As for data reliability, we extended the backbone design of the Airbox to interoperate smart-contract-oriented structure to record every transaction. Meanwhile, data on-chain will send a verifiable request to mark itself as "being tradeable." This step enables buyers to review and bargain at will. Last but not least, payments will be stored on the smart contracts until the transactions are confirmed. The entire sequence is illustrated in Figure \ref{fig:airbox}.
 
 \begin{figure}[h]
     \centering
@@ -71,7 +73,7 @@ Looking at Airbox\cite{LASS} as an example, every household with an Airbox devic
     \label{fig:airbox}
 \end{figure}
 
-Another example is smart meter data which can assist the energy transition. In the meanwhile, time smart meter data is privacy-sensitive, that implies power consumption can be associated with appliances used. With measurements every 0.5 seconds, it is possible to determine what television channel is being watched.\cite{SmartGridPrivacy}. Furthermore, by facilitating the aggregate data, the owner of these records can perform the following analysis:
+Another example is smart meter. Imagine that an insurance company can investigate their clients’ lifestyle by collecting real-time use records from smart meter. In this way, insurance companies can transfer pricing for different types of users while an electricity utility is able to have more efficient energy transition strategy. In the meantime, real-time smart meter data is privacy-sensitive, that implies power consumption can be associated with appliances uses. With measurements every single 0.5 seconds, it is possible to determine what television channel is being watched.\cite{SmartGridPrivacy}. Furthermore, by facilitating the aggregate data, the owner of these records can perform the following analysis:
 \begin{enumerate}[leftmargin=*,labelsep=4.9mm]
     \item Detect how many people live at certain house by watching the number of cycles of indoor hot water heater (not accounting for bad hygiene);
     \item Acquainted with somebody's availability by the energy cycle of the TV;
@@ -87,14 +89,14 @@ As shown in Figure \ref{fig:power_usage}, the data is considered granular data a
     \label{fig:power_usage}
 \end{figure}
 
-The General Data Protection Regulation (GDPR) came into effect since May 25, 2018. It provides data and privacy protection for European citizens. When dealing with personal identifiable information (like the measurements of a smart meter) a service provider has to:
+The General Data Protection Regulation (GDPR) was adopted on May 25, 2018. It provides data and privacy protection for European citizens. When dealing with personal identifiable information (like the measurements of a smart meter) a service provider has to:
 \begin{enumerate}[leftmargin=*,labelsep=4.9mm]
-    \item State the goal for data usage clearly (and only use the data for that goal).
-    \item Have consent of the consumer to access the data.
+    \item State the goal for data use clearly (and only use the data for that goal).
+    \item Have consent from the consumer to access the data.
     \item Stop collecting data when consent is revoked.
 \end{enumerate}
 
-In short, energy usage data cannot be legally shared without adhering to it. For open usage of smart meter measurements a solution needs to be provided that adheres to the requirements of the GDPR. Two goals of this solution are: 1) Energy data goes directly from the smart meter to the service provider; 2) Consent (authorizations to access energy data) are stored decentrally. When data or consent is stored centrally, there are privacy concerns. Consent might be irrevocable because a centralized server is down, and it also lead to a vendor lock-in, where the owner of the smart meter data reader determines what service providers can use the data, instead of creating a level playing field where you can authorize anyone to access the data.
+In summary, energy-use data cannot be legally shared without the authorization from the end-users. For a wide range of use of smart meter, such a solution is supposed to be GDPR-compliant. Two goals of this solution are: 1) Energy data goes directly from the smart meter to the service provider; 2) Consent (authorizations to access energy data) are stored in decentralized approaches. When data or consent is centralized-stored, either security or privacy concerns emerge. Consent might be irrevocable because a centralized server is down, and it also lead to a vendor lock-in, where the owner of the smart meter data reader determines what service providers can use the data, instead of creating a level playing field where you can authorize anyone to access the data.
 
 The highly flexible value creation networks that result from market economy principles will require new forms of collaboration between companies, depending on the creation of a common global communication and computing infrastructure that allows economic relationships between machines. Our proposed decentralized data marketplace is expected to serve as a vendor and industry-neutral platform, encouraging open innovation and industrial automation.
 
